# mousefood

./: .markdownlint-cli2.yaml  .markdownlint.yaml  BREAKING-CHANGES.md  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  cliff.toml
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: changelog.yml  ci.yml  publish.yml
examples/: simulator.rs
examples/simulator/: Cargo.toml  README.md
examples/simulator/src/: main.rs
mousefood/: Cargo.toml
mousefood/src/: backend.rs  colors.rs  default_font.rs  error.rs  framebuffer.rs  lib.rs  macros.rs
src/: backend.rs  colors.rs  default_font.rs  error.rs  framebuffer.rs  lib.rs  macros.rs  prelude.rs
