[workspace]
resolver = "3"
members = ["mousefood"]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/j-g00da/mousefood"
repository = "https://github.com/j-g00da/mousefood"
keywords = ["embedded-graphics", "ratatui", "tui"]
categories = ["embedded"]
exclude = ["/.github", "/assets"]

[workspace.dependencies]
ratatui-core = { version = "0.1.0-alpha.5", features = ["underline-color"] }
thiserror = { version = "2.0.12", default-features = false }
embedded-graphics = "0.8.1"
embedded-graphics-simulator = "0.7.0"
embedded-graphics-unicodefonts = "0.1.0"
weact-studio-epd = { version = "0.1.2", features = ["blocking"] }
ratatui = { version = "0.30.0-alpha.4", default-features = false }
rstest = "0.25.0"
paste = "1.0.15"

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
std_instead_of_core = "warn"
std_instead_of_alloc = "warn"
alloc_instead_of_core = "warn"
